# ai-center

./: .gitignore  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
aicenter/: __init__.py  img.py  ioc.py  log.py  net.py  sam.py  utils.py
deploy/: init-template
test/: inference.py
